<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel Logger</string>
    <string name="title_section3">Chart</string>
    <string name="title_section2">Summary</string>
    <string name="title_section1">New Entry</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="kms">Kms</string>
    <string name="fuel_filled">Fuel Filled</string>
    <string name="l">Lts</string>
    <string name="fuel_price">Fuel Price</string>
    <string name="cents">cents</string>
    <string name="save">Save</string>
    <string name="date_time_dialog_title">Set Date and Time</string>
    <string name="reset">Reset</string>
    <string name="edit_date_time">Edit Date Time</string>
    <string name="you_do_not_have_any_fuel_logs_">You do not have any fuel logs!</string>
    <string name="summary_error_text">You do not have any fuel logs!</string>
    <string name="preference_first_launch">false</string>
    <string name="initial_odo_instruction">Please enter your initial odomoeter reading. The default is 0kms.</string>
    <string name="initial_odo_value">INITIAL_ODO_VALUE</string>
    <string name="initial_odo_dialog_title">Initial Odometer Reading</string>
    <string name="price_input_hint">Price per litre in cents</string>
    <string name="fuel_amount_hint">Amount of fuel filled in litres</string>
    <string name="odo_input_hint">Odometer reading in kms</string>
    <string name="dashboard_text_label">"No of days since last fuel fill "</string>
    <string name="dashboard_text_date">12-Feb-2012</string>
    <string name="fuel_tank_icon">Fuel tank icon</string>
    <string name="coins_icon">Coins icon</string>
    <string name="wallet_icon">Wallet icon</string>

    <string-array name="chart_selector_options">
        <item>Odo vs Price</item>
        <item>Odo vs Performance</item>
    </string-array>

    <string name="select_a_chart">Select a chart</string>

    <!-- From Interative Line Graph -->
    <string name="app_description">A sample application that allows you to navigate a simple line graph using touch gestures.</string>
    <string name="action_zoom_in">Demo zoom in</string>
    <string name="action_zoom_out">Demo zoom out</string>
    <string name="action_pan_left">Demo pan left</string>
    <string name="action_pan_right">Demo pan right</string>
    <string name="action_pan_up">Demo pan up</string>
    <string name="action_pan_down">Demo pan down</string>

</resources>