<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/datetimelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/datetimelabel"
            style="@style/style_log_entry_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/datetimeedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_date_time"
            android:scaleType="fitXY"
            android:src="@drawable/edit" />
    </LinearLayout>

    <TextView
        android:id="@+id/odolabel"
        style="@style/style_log_entry_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/odometer_reading" />

    <LinearLayout
        android:id="@+id/odolayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/odoinput"
            style="@style/style_log_entry_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/odo_unit_symbol"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kms" />
    </LinearLayout>

    <TextView
        android:id="@+id/fuellabel"
        style="@style/style_log_entry_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuel_filled" />

    <LinearLayout
        android:id="@+id/fuellayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/fuelamoutinput"
            style="@style/style_log_entry_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/fuel_unit_symbol"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/l" />
    </LinearLayout>

    <TextView
        android:id="@+id/fuelprice"
        style="@style/style_log_entry_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuel_price" />

    <LinearLayout
        android:id="@+id/fuelpricelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/fuelpriceinput"
            style="@style/style_log_entry_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/fuel_price_unit_symbol"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cents" />
    </LinearLayout>

    <Button
        android:id="@+id/savebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>